# nanoprotogeny

./: .gitignore  README.md  pyproject.toml
src/nanoprotogeny/: main.py
src/nanoprotogeny/analysis/: compute_mqe_rates.py  plot_k16_charts.py  plot_mqe_rates.py  plot_riemann_results.py  plot_tower_charts.py
src/nanoprotogeny/archive/: hamiltonian_riemann.py.bak  ionqurgate.py
src/nanoprotogeny/basis/: mqebasis.py  mqebasisloader.py
src/nanoprotogeny/cirq-ionq/: __init__.py  ionq_gateset.py  ionq_native_gates.py  ionq_native_target_gateset.py
src/nanoprotogeny/ionq/: README.md  YB171PLUSHARDWARE.py  __init__.py  holographic.py  ionqBLOGgate.py  ionqBVIRTgate.py  ionqcnotgate.py  ionqconnectivity.py  ionqcrossgates.py  ionqcurgate.py  ionqczgate.py  ionqfortenoise.py  ionqhadamardgate.py  ionqhistogram.py  ionqjanus.py  ionqmqegates.py  ionqparamgates.py  ionqpauligates.py  ionqphasegates.py  ionqpowercontrolgate.py  ionqprojectorgate.py  ionqscheduler.py  ionqsemantics.py  ionqsumgate.py  ionqswapgate.py  ionqtetralemmatics.py  ionqtoffoligate.py  ionqtrotter.py  ionqvirtualgates.py  tetralemmatics.py
src/nanoprotogeny/molecular/: hamiltonian_riemann.py  mqeaobuild.py  mqeaointegrals.py  mqeatomicweights.py  mqeconstants.py  mqecstar.py  mqedatagenerator.py  mqeecp.py  mqefci.py  mqegeometries.py  mqehamiltonian.py  mqehybridgenerator.py  mqeintegralloader.py  mqeintegrals.py  mqeintegralstore.py  mqelocalize.py  mqemaplanglands.py  mqemolecules.py  mqephasetracker.py  mqeprotogeny.py  mqeriemann.py  mqescf.py  mqeseedtensors.py  mqestoichiometry.py  mqetower.py
src/nanoprotogeny/pyrite/: pyrite.json  pyrite_baseline.py  pyrite_noisy.py  pyrite_noisy_evolution.py  pyrite_pyscf.py
src/nanoprotogeny/qpe/: mqehmqe.py  mqeqpe.py  mqeriemannqpe.py  mqevancqpe.py  (+1 more)
tests/: cirq_ionq_api.py  histogram.py  test_ecp.py  test_full_basis_integrals.py  test_geometry_consistency.py  test_steps_4_5.py
(+272 files in other folders)
