# Copyright 2026 Santos C. Borom
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
########################################################################
[project]
name = "nanoprotogeny"
version = "0.1.0"
description = "Atomic and Quantum Chemistry Simulator"
authors = [
    {name = "Santos Borom",email = "garland.maths@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "quantum-metal (>=0.5.3.post1,<0.6.0)",
    "cirq (>=1.6.1,<2.0.0)",
    "qsimcirq (>=0.22.0,<0.23.0)",
    "qiskit[qasm3-import] (>=2.3.1,<3.0.0)",
    "cirq-google (>=1.6.1,<2.0.0)",
    "cirq-ionq (>=1.6.1,<2.0.0)",
    "pyscf (>=2.13.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "basis-set-exchange (>=0.12,<0.13)",
    "pennylane (>=0.44.1,<0.45.0)",
    "aiohttp (>=3.13.5,<4.0.0)",
    "fsspec (>=2026.4.0,<2027.0.0)",
    "h5py (>=3.16.0,<4.0.0)",
    "rdkit (>=2026.3.1,<2027.0.0)",
    "pubchempy (>=1.0.5,<2.0.0)",
    "geometric (>=1.1,<2.0)",
    "block2 (>=0.5.3,<0.6.0)"
]

[tool.poetry]
packages = [{include = "nanoprotogeny", from = "src"}]

[tool.poetry.scripts]
mqe          = "nanoprotogeny.main:main"
mqe-generate = "nanoprotogeny.molecular.mqedatagenerator:main_mqe_dataset"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
